--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-validator": "^7.0.1",
-    "@elastic/elasticsearch": "^8.11.0"
+    "@elastic/elasticsearch": "^8.11.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
